Conclusão projeto final

--- a/index.html
+++ b/index.html
@@ -15,17 +15,10 @@
 <body>
     <main>
         <section class="robotron">
-            <img class="robo"  src="./Robotron 2000 - cores/Robotron 2000 - Vermelho/robotron.png" alt="Robotron Vermelho">
+            <img class="robo" data-cor="Vermelho" src="./Robotron 2000 - cores/Robotron 2000 - Vermelho/robotron.png" alt="Robotron Vermelho">
             <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
         </section>
-        <!-- <section class="robos-reserva">
-            <img class="robozinho" data-robozinho="Amarelo" src="./Robotron 2000 - cores/Robotron 2000 - Amarelo/robotron.png" alt="Robotron Amarelo">
-            <img class="robozinho" data-robozinho="Azul" src="./Robotron 2000 - cores/Robotron 2000 - Azul/robotron.png" alt="Robotron Azul">
-            <img class="robozinho" data-robozinho="Branco" src="./Robotron 2000 - cores/Robotron 2000 - Branco/robotron.png" alt="Robotron Branco">
-            <img class="robozinho" data-robozinho="Preto" src="./Robotron 2000 - cores/Robotron 2000 - Preto/robotron.png" alt="Robotron Preto">
-            <img class="robozinho" data-robozinho="Rosa" src="./Robotron 2000 - cores/Robotron 2000 - Rosa/robotron.png" alt="Robotron Rosa">
-            <img class="robozinho" data-robozinho="Vermelho" src="./Robotron 2000 - cores/Robotron 2000 - Vermelho/robotron.png" alt="Robotron Vermelho">
-        </section> -->
+    
         <section class="box estatisticas">
             <div class="estatistica">
                 <p class="estatistica-titulo">Força</p>
@@ -104,9 +97,9 @@
                     <div class="peca">
                         <label for="" class="peca-titulo">Cores</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-ajuste="-" data-pecas="foguetes">&vltri;</buttom>
+                            <buttom class="controle-ajuste" data-reserva="-" >&vltri;</buttom>
                             <input type="image" class="controle-cores" src="./Robotron 2000 - cores/Robotron 2000 - Vermelho/robotron.png" data-image>
-                            <buttom class="controle-ajuste" data-ajuste="+" data-pecas="foguetes">&vrtri;
+                            <buttom class="controle-ajuste" data-reserva="+">&vrtri;
                             </buttom>
                         </div>    
                     </div>
